// Copyright 2019 SolarNetwork Foundation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package solarnetwork.esi.domain;

option cc_enable_arenas = true;
option java_multiple_files = true;
option java_outer_classname = "CryptoKeyProto";
option java_package = "net.solarnetwork.esi.domain";
option objc_class_prefix = "ESI";

/**
 * A cryptographic key.
 *
 * This message is used to exchange public keys between systems.
 */
message CryptoKey {

  // The key algorithm
  string algorithm = 1;
  
  // The key encoding
  string encoding = 2;
  
  // The key data
  bytes key = 3;
  
}
